fix: damage numbers would wrap with obscure inline rolls enabled

--- a/less/chat.less
+++ b/less/chat.less
@@ -340,6 +340,10 @@
   .chat-attack {
     margin-bottom: 2px;
 
+    td.roll {
+      white-space: nowrap;
+    }
+
     .attack-flavor {
       i.fas {
         color: red;
